@@ -146,8 +146,10 @@
         <file>pixmaps/radio-disabled.png</file>
         <file>pixmaps/radio-checked-disabled.png</file>
         <file>pixmaps/plus-button.png</file>
-        <file>pixmaps/plus.png</file>
-        <file>pixmaps/minus.png</file>
+        <file>pixmaps/plus_white.png</file>
+        <file>pixmaps/minus_white.png</file>
+        <file>pixmaps/plus_black.png</file>
+        <file>pixmaps/minus_black.png</file>
         <file>pixmaps/checkbox-disabled.png</file>
         <file>pixmaps/checkbox-checked-disabled.png</file>
         <file>pixmaps/arrow-top-disabled.png</file>
