@@ -1,5 +1,6 @@
 MUSICardio 4.1.0:
 - Switch to Ubuntu 22.
+- PolygonROI: update icons, fix a glitch when users change ROI label, hide label panel in pipelines.
 
 MUSICardio 4.0.2:
 - Fix drawing problem in pipelines with custom step of PolygonROI.
